# dipper

./: .gitignore  CLAUDE.md  README.md  design.md  expectations.md  pyproject.toml  requirements.md  snags.md
.github/workflows/: ci.yml
bs/: dev  fuzz  install  install-completions  install.zsh  lint  test
clipper/: __init__.py  __main__.py  app.py  constants.py  highlight.py  output.py  widgets.py
completions/: _dipper
dipper/: __init__.py  __main__.py  actions.py  app.py  cli.py  config.py  constants.py  highlight.py  model.py  output.py  providers.py  state.py  themes.py  view.py  widgets.py
dipper/actions/: __init__.py  groups.py  range_fill.py  search.py
dipper/cli/: __init__.py  cli.py  flags.py  ls.py  validations.py
dipper/commons/: __init__.py  colour.py  completion.py  config.py  constants.py  files.py  git.py  hash.py  help.py  highlight.py  loader.py  paths.py
dipper/commons/themes/: __init__.py  dark.py  lavender.py  registry.py  roseate.py
dipper/controller/: __init__.py  output.py
dipper/controller/actions/: __init__.py  groups.py  misc.py  nav.py  search.py  (+2 more)
dipper/modals/: __init__.py  annotation.py  annotation.tcss  command.py  groups.py  rename.py
dipper/model/: __init__.py
dipper/state/: __init__.py  line.py  queries.py
dipper/themes/: __init__.py  dark_plus.py  dracula.py  github_light.py  light_plus.py
dipper/view/: __init__.py  app.py  app.tcss  app_types.py  bindings.py  providers.py  render.py  widgets.py
integrations/yazi/: dipper-annotate
tests/: fuzz.py  test_app.py  test_config.py  test_model.py  test_output.py
(+16 files in other folders)
