[project]
name = "dipper"
version = "0.1.0"
description = "Interactive file annotation TUI"
requires-python = ">=3.14"
dependencies = [
    "pygments>=2.20.0",
    "textual>=8.2.6",
]

[project.scripts]
dipper = "dipper.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["dipper*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
