[project]
name = "dipper"
version = "0.1.0"
description = "Interactive file annotation TUI"
requires-python = ">=3.14"
dependencies = [
    "pygments>=2.20.0",
    "textual>=8.2.6",
]

[project.scripts]
dipper = "dipper.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["dipper*"]

[tool.setuptools.package-data]
dipper = ["modals/*.tcss", "*.tcss"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "BLE", "SIM", "RUF", "PLR", "C"]

[tool.ruff.lint.pylint]
max-statements = 14
max-args = 4

[tool.ruff.lint.mccabe]
max-complexity = 7
